# pico

Pico_w_project/: Book1.xlsx  CMakeLists.txt  Pico_w_project.code-workspace  Pico_w_project.cpp
Pico_w_project_dmeo/: CMakeLists.txt  Pico_w_project_dmeo.cpp
Sphere_Moving_Mechanism/: CMakeLists.txt  Sphere_Moving_Mechanism.c
ohashi-v2/: CMakeLists.txt
ohashi-v2/ohashi-v2/: CMakeLists.txt  ohashi-v2.cpp
pico_w2/: CMakeLists.txt  pico_w2.cpp
pico_w2/lib/: CMakeLists.txt
pico_w2/lib/test/: test.cpp  test.hpp
